fix: 优化 swagger 文档和 dto 文件命名
