# pkg/serve/controller/account/dto/register_acc_request.go
@@ -16,16 +16,3 @@ type RegisterRequest struct {
 	EmailVerificationCode string `json:"email_verification_code" xml:"email_verification_code" form:"email_verification_code" query:"email_verification_code" validate:"required"`
 	ImgVerificationCode   string `json:"img_verification_code" xml:"img_verification_code" form:"img_verification_code" query:"img_verification_code" validate:"required"`
 }
-
-// GetOneAccountRequest 获取账户信息请求体
-//	@Description	请求获取账户信息时所需参数
-//	@Param			email	    body	string	true	"用户邮箱"
-//	@Param			nickname	body	string	true	"用户昵称"
-//	@Param			phone	    body	string	true	"用户手机号"
-//	@Param			role_code	body	string	true	"用户角色编码"
-type GetAccountRequest struct {
-	Email    string `json:"email" xml:"email" form:"email" query:"email" validate:"required,email"`
-	Nickname string `json:"nickname" xml:"nickname" form:"nickname" query:"nickname" validate:"required"`
-	Phone    string `json:"phone" xml:"phone" form:"phone" query:"phone" validate:"required"`
-	RoleCode string `json:"role_code" xml:"role_code" form:"role_code" query:"role_code" validate:"required"`
-}
